Fix body overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -348,6 +348,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  overflow: hidden;
   scroll-behavior: smooth;
 }
 
